<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="label_total_balance">total balance</string>
    <string name="label_total_income">total income</string>
    <string name="label_total_expense">total expense</string>
    <string name="label_recent_transactions">Recent Transactions</string>
    <string name="transaction_date_format">MMM dd, yyyy</string>

    <string name="transaction_hint_title">Title</string>
    <string name="transaction_hint_amount">Amount</string>
    <string name="transaction_hint_type">Type</string>
    <string name="transaction_hint_date">When</string>
    <string name="transaction_hint_tags">Tags</string>
    <string name="save_transaction">save transaction</string>

    <string name="required_field_error">Required field</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="label_title">Title</string>
    <string name="label_amount">Amount</string>
    <string name="label_transaction_type">Transaction Type</string>
    <string name="label_transaction_tag">Tag</string>
    <string name="label_when">When</string>
    <string name="edit_transaction_fab_text">Edit</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_details">Details</string>
    <string name="title_transaction_form">Transaction Form</string>
    <string name="title_transactions_list">Transactions</string>

    <string name="snackbar_deleted_title">Deleted: %d</string>
    <string name="undo_button_text">Undo</string>
    <string name="label_see_all_transactions">See All</string>

    <string-array name="transaction_types">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string-array name="transaction_tags">
        <item>Work</item>
        <item>Transport</item>
        <item>Person</item>
        <item>Food</item>
        <item>Other</item>
    </string-array>

    <!--  Transition names  -->
    <string name="transition_name_all_transactions" translatable="false">all_transactions</string>
    <string name="transition_name_add_edit_transaction" translatable="false">add_edit_transaction</string>
    <string name="transition_name_add_transaction" translatable="false">add_transaction</string>
    <string name="transition_name_edit_transaction" translatable="false">edit_transaction</string>
</resources>