<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.TransactionDetailsFragment">

    <TextView
        android:id="@+id/label_title"
        style="@style/details_label_style"
        android:text="@string/label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_title"
        style="@style/details_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_title"
        tools:text="CashBack Offer" />

    <TextView
        android:id="@+id/label_amount"
        style="@style/details_label_style"
        android:text="@string/label_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_title" />

    <TextView
        android:id="@+id/transaction_amount"
        style="@style/details_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_amount"
        tools:text="200" />

    <TextView
        android:id="@+id/label_type"
        style="@style/details_label_style"
        android:text="@string/label_transaction_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_amount" />

    <TextView
        android:id="@+id/transaction_type"
        style="@style/details_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_type"
        tools:text="Income" />

    <TextView
        android:id="@+id/label_tag"
        style="@style/details_label_style"
        android:text="@string/label_transaction_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_type" />

    <TextView
        android:id="@+id/transaction_tag"
        style="@style/details_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_tag"
        tools:text="Other" />

    <TextView
        android:id="@+id/label_when"
        style="@style/details_label_style"
        android:text="@string/label_when"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_tag" />

    <TextView
        android:id="@+id/transaction_date"
        style="@style/details_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_when"
        tools:text="Other" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/edit_transaction"
        style="@style/edit_transaction_fab_style"
        android:text="@string/edit_transaction_fab_text"
        android:transitionName="@string/transition_name_edit_transaction"
        app:icon="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>